--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,5 +14,5 @@ jobs:
 
       - name: run app
         run: |
-          cd ./src
+          cd ./code/backend
           sudo docker compose up -d --build
