--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: ./backend
     ports:
       - "8080:8080"
-    network_mode: "host"
+    # network_mode: "host"
 
   postgres:
     image: postgres:16
@@ -14,9 +14,9 @@ services:
       PGDATA: "/var/lib/postgresql/data/pgdata"
     volumes:
       - ../2. Init Database:/docker-entrypoint-initdb.d
-      - mldb-data:/var/lib/postgresql/data
+      - appdb-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
 volumes:
-  mldb-data:
+  appdb-data:
