Alpha build Work

--- a/Application_Front/pubspec.yaml
+++ b/Application_Front/pubspec.yaml
@@ -26,10 +26,18 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
+
+
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "Resources/Logo.png"
+  min_sdk_android: 21
 
 flutter:
   assets:
     - Resources/
     - Resources/MainMap.svg
-    
+
   uses-material-design: true
