--- a/Application_Front/pubspec.yaml
+++ b/Application_Front/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   vector_math: ^2.1.4
   flutter_svg: ^2.0.16
+  test: ^1.25.7
 
 dev_dependencies:
   flutter_test:
